--- a/app/src/main/res/layout/activity_agregar_receta.xml
+++ b/app/src/main/res/layout/activity_agregar_receta.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#E9F5DB"
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -10,6 +12,10 @@
         android:padding="16dp">
 
         <!-- Campo para el nombre -->
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="40dp" />
+
         <EditText
             android:id="@+id/editTextNombre"
             android:layout_width="match_parent"
@@ -53,13 +59,18 @@
 
 
         <!-- Vista para seleccionar la imagen -->
-        <Button
-            android:id="@+id/buttonSeleccionarImagen"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Seleccionar imagen" />
 
         <!-- Imagen seleccionada -->
+        <Button
+            android:id="@+id/buttonSeleccionarImagen"
+            android:layout_width="wrap_content"
+            android:layout_height="38dp"
+            android:layout_gravity="center|center_vertical"
+            android:background="@drawable/border"
+            android:gravity="center_horizontal"
+            android:includeFontPadding="false"
+            android:text="Seleccionar imagen" />
+
         <ImageView
             android:id="@+id/imageViewSeleccionada"
             android:layout_width="match_parent"
@@ -71,10 +82,13 @@
         <!-- Botón para guardar -->
         <Button
             android:id="@+id/buttonGuardarReceta"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_height="37dp"
+            android:layout_gravity="center|center_vertical"
             android:layout_marginTop="16dp"
+            android:background="@drawable/border"
             android:backgroundTint="#6CA76F"
+            android:gravity="center_vertical"
             android:text="Guardar receta"
             android:textColor="@android:color/white" />
 
