--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -23,29 +23,44 @@
             android:orientation="vertical">
 
             <!-- Sección del Top de Mejores Platillos -->
+
+            <!-- Top de Mejores Platillos -->
+
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="103dp"
+                android:layout_height="132dp"
                 android:background="#5C9356"
                 android:orientation="horizontal"
                 android:paddingEnd="20dp">
 
+                <Space
+                    android:layout_width="116dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1" />
+
                 <ImageView
                     android:id="@+id/imageView2"
-                    android:layout_width="283dp"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="right"
+                    android:layout_width="98dp"
+                    android:layout_height="75dp"
                     android:layout_marginLeft="45dp"
+                    android:layout_marginTop="38dp"
                     android:layout_weight="1"
                     app:srcCompat="@drawable/recetas" />
 
+                <Space
+                    android:layout_width="60sp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1" />
+
                 <Button
                     android:id="@+id/subir1"
-                    android:layout_width="120dp"
-                    android:layout_height="68dp"
-                    android:layout_marginTop="15dp"
+                    android:layout_width="90dp"
+                    android:layout_height="67dp"
+                    android:layout_marginTop="44dp"
                     android:layout_marginEnd="1dp"
-                    android:layout_weight="1" />
+                    android:layout_weight="1"
+                    android:backgroundTint="#68A162"
+                    android:drawableBottom="@drawable/subir" />
 
                 <Space
                     android:layout_width="60sp"
@@ -54,13 +69,14 @@
 
                 <Button
                     android:id="@+id/perfil123"
-                    android:layout_width="61dp"
+                    android:layout_width="57dp"
                     android:layout_height="70dp"
-                    android:layout_marginTop="15dp"
-                    android:layout_marginEnd="1dp" />
+                    android:layout_marginTop="44dp"
+                    android:layout_marginEnd="1dp"
+                    android:backgroundTint="#68A162"
+                    android:drawableBottom="@drawable/menu" />
             </LinearLayout>
 
-            <!-- Top de Mejores Platillos -->
             <TextView
                 android:id="@+id/tituloTopPlatillos"
                 android:layout_width="wrap_content"
@@ -68,7 +84,7 @@
                 android:padding="16dp"
                 android:text="Top de Mejores de Platillos"
                 android:textColor="@color/black"
-                android:textSize="14sp"
+                android:textSize="16sp"
                 android:textStyle="bold" />
 
             <androidx.recyclerview.widget.RecyclerView
@@ -80,6 +96,7 @@
                 android:scrollbars="horizontal" />
 
             <!-- Sección de Platillos Poblanos -->
+
             <TextView
                 android:id="@+id/tituloPoblanos"
                 android:layout_width="wrap_content"
@@ -87,7 +104,7 @@
                 android:padding="16dp"
                 android:text="Poblanos"
                 android:textColor="@color/black"
-                android:textSize="14sp"
+                android:textSize="16sp"
                 android:textStyle="bold" />
 
             <androidx.recyclerview.widget.RecyclerView
@@ -106,7 +123,7 @@
                 android:padding="16dp"
                 android:text="Todos los Platillos"
                 android:textColor="@color/black"
-                android:textSize="14sp"
+                android:textSize="16sp"
                 android:textStyle="bold" />
 
             <androidx.recyclerview.widget.RecyclerView
